<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="manifest_application_name">"DeepskyLog mobile"</string>
    <string name="manifest_application_description">"A mobile version for DeepskyLog"</string>
    
    <string name="mainmenu_settings_text">"Configuration"</string>
    <string name="mainmenu_login_text">"Login on DSL"</string>
    
    <string name="mainfragment_ds_button_text">"Deepsky"</string>
    <string name="mainfragment_com_button_text">"Comets"</string>
    <string name="mainfragment_obs_button_text">"Observers"</string>
    <string name="mainfragment_eph_button_text">"Ephemerides"</string>
    <string name="mainfragment_loggedperson_text">"Logged in as "</string>
    <string name="mainfragment_login_button_text">"Login"</string>
 
    <string name="logindialog_login_button_text">"Login"</string>
    <string name="logindialog_cancel_button_text">"Anonymous"</string>
    
    <string name="preferences_autologin_text">"Automatic login</string>
    <string name="preferences_autologin_summary">"DeepskyLog Mobile automatically tries to connect to the server"</string>
    
    <string name="preferences_loginid_text">"Login name</string>
    <string name="preferences_loginid_summary">"Name used to log in on deeskylog server"</string>
    
    <string name="preferences_loginpassword_text">"Login password"</string>
    <string name="preferences_loginpassword_summary">"Password that is used to log in to the deeskylog server"</string>
    
    <string name="actionbar_title_text">"DeepskyLog"</string>
    <string name="actionbar_subtitle_text_online">" - Online"</string>
    <string name="actionbar_subtitle_text_offline">" - Offline"</string>
    <string name="actionbar_connectivity_M">"Manual"</string>
    <string name="actionbar_connectivity_N">"Not connected to DSL"</string>
    <string name="actionbar_connectivity_X">"No connection possible to DSL"</string>
    <string name="actionbar_connectivity_S">"Connected"</string>
    <string name="actionbar_connectivity_L">"Logged as "</string>
    <string name="actionbar_connectivity_V">"Visitor"</string>
        
    <string name="observers_askaboutfirstruntour">"Do you want to follow the first run tour?"</string>
    <string name="observers_askaboutcredentials">"Do you already have DSL credentials?"</string>
    <string name="observers_askenteringcredentials">"Do you want to enter DSL credentials and log in?"</string>
    <string name="observers_asktocreatenewaccount">"Do you want to register a new account?"</string>
    <string name="observers_tellaboutconfigurationmenu">"You can always enter your settings via the 'Configurations' menu."</string>
    <string name="observers_invalidcredentials">"Invalid DSL credentials. Please enter your settings via the 'Configurations' menu."</string>

    <string name="cometfragment_observationsbydate_button_text">"Comet Observations\nBy date"</string>
    <string name="cometfragment_observationsunsorted_button_text">"Comet Observations\nUnsorted"</string>
    <string name="cometfragment_observationsquery_button_text">"Observations\nQuery"</string>
    <string name="cometfragment_objectsquery_button_text">"Objects\nQuery"</string>
    <string name="cometfragment_command_button_text">"Command (for developers)"</string>
    <string name="cometfragment_to_see">" new observations you didn't see yet."</string>
    <string name="cometfragment_cometobservations_in_dsl">" comet observations in Deepskylog."</string>
    <string name="cometfragment_cometobservations_fetching">"Fetching "</string>    
    <string name="cometfragment_cometobservations_details">"Details "</string>   
    
    <string name="cometobservationsdetailsfragment_text1_textview_text">"Comet"</string>
    <string name="cometobservationsdetailsfragment_observations_button_text">"Observations"</string>
    <string name="cometobservationsdetailsfragment_objects_button_text">"Objects"</string>
    <string name="cometobservationsdetailsfragment_search_button_text">"Search"</string>
    <string name="cometobservationsdetailsfragment_mode_button_text1">"List"</string>
    <string name="cometobservationsdetailsfragment_mode_button_text2">"Compact"</string>
    <string name="cometobservationsdetailsfragment_mode_button_text3">"Detail"</string>
    <string name="cometobservationsdetailsfragment_to_see">" new observations"</string>
    <string name="cometobservationsdetailsfragment_to_see1">" new observation"</string>
    <string name="cometobservationsdetailsfragment_to_see0">"No new observations"</string>
    <string name="cometobservationsdetailsfragment_not_available">" not available"</string>
    <string name="cometobservationsdetailsfragment_checking1">"Checking for more observations to get "</string>
    <string name="cometobservationsdetailsfragment_observation">"Observation "</string>
    <string name="cometobservationsdetailsfragment_observation_was_deleted">" has been deleted by it's observer."</string>
    <string name="cometobservationsdetailsfragment_observation_unavailable">" unavailable, check network connection."</string>
    
    <string name="cometobservationslistfragment_text1_textview_text">"Comet"</string>
    <string name="cometobservationslistfragment_observations_button_text">"Observations"</string>
    <string name="cometobservationslistfragment_objects_button_text">"Objects"</string>
    <string name="cometobservationslistfragment_search_button_text">"Search"</string>
    <string name="cometobservationslistfragment_checking1">"Checking for more observations to get "</string>
    <string name="cometobservationslistfragment_observation">"Observation "</string>
    <string name="cometobservationslistfragment_observation_was_deleted">" has been deleted by it's observer."</string>
    
    <string name="cometobservationsqueryfragment_text1_textview_text">"Comet observations query - to be implemented"</string>
    <string name="cometobjectsqueryfragment_text1_textview_text">"Comet objects query - to be implemented"</string>

    <string name="deepskyfragment_observationsbydate_button_text">"Deepsky Observations\nBy date"</string>
    <string name="deepskyfragment_observationsunsorted_button_text">"Deepsky Observations\nUnsorted"</string>
    <string name="deepskyfragment_observationsquery_button_text">"Observations\nQuery"</string>
    <string name="deepskyfragment_objectsquery_button_text">"Objects\nQuery"</string>
    <string name="deepskyfragment_command_button_text">"Command (for developers)"</string>
    <string name="deepskyfragment_to_see">" new observations"</string>
    <string name="deepskyfragment_deepskyobservations_in_dsl">" deepsky observations in Deepskylog."</string>
    <string name="deepskyfragment_deepskyobservations_fetching">"Fetching "</string>    
    <string name="deepskyfragment_deepskyobservations_observation">"Observation "</string>    
    <string name="deepskyfragment_deepskyobservations_details">"Details "</string>    
    
    <string name="deepskyobservationsdetailsfragment_text1_textview_text">"Deepsky"</string>
    <string name="deepskyobservationsdetailsfragment_observations_button_text">"Observations"</string>
    <string name="deepskyobservationsdetailsfragment_objects_button_text">"Objects"</string>
    <string name="deepskyobservationsdetailsfragment_search_button_text">"Search"</string>
    <string name="deepskyobservationsdetailsfragment_mode_button_text1">"List"</string>
    <string name="deepskyobservationsdetailsfragment_mode_button_text2">"Compact"</string>
    <string name="deepskyobservationsdetailsfragment_mode_button_text3">"Detail"</string>
    <string name="deepskyobservationsdetailsfragment_to_see">" new observations"</string>
    <string name="deepskyobservationsdetailsfragment_to_see1">" new observation"</string>
    <string name="deepskyobservationsdetailsfragment_to_see0">"No new observations"</string>
    <string name="deepskyobservationsdetailsfragment_not_available">" not available"</string>
    <string name="deepskyobservationsdetailsfragment_checking1">"Checking for more observations to get "</string>
    <string name="deepskyobservationsdetailsfragment_observation">"Observation "</string>
    <string name="deepskyobservationsdetailsfragment_observation_was_deleted">" has been deleted by it's observer."</string>
    <string name="deepskyobservationsdetailsfragment_observation_unavailable">" unavailable, check network connection."</string>
    <string name="deepskyobservationsdetailsfragment_drawing_button_text">"Show drawing"</string>
    
    <string name="deepskyobservationslistfragment_text1_textview_text">"Deepsky"</string>
    <string name="deepskyobservationslistfragment_observations_button_text">"Observations"</string>
    <string name="deepskyobservationslistfragment_objects_button_text">"Objects"</string>
    <string name="deepskyobservationslistfragment_search_button_text">"Search"</string>
    <string name="deepskyobservationslistfragment_mode_button_text1">"List"</string>
    <string name="deepskyobservationslistfragment_mode_button_text2">"Compact"</string>
    <string name="deepskyobservationslistfragment_mode_button_text3">"Detail"</string>
    <string name="deepskyobservationslistfragment_to_see">" to see"</string>
    <string name="deepskyobservationslistfragment_not_available">" not available"</string>
    <string name="deepskyobservationslistfragment_checking1">"Checking for more observations to get "</string>
    <string name="deepskyobservationslistfragment_observation">"Observation "</string>
    <string name="deepskyobservationslistfragment_observation_was_deleted">" has been deleted by it's observer."</string>
    
    <string name="deepskyobservationsqueryfragment_text1_textview_text">"Deepsky observations query - to be implemented"</string>
    <string name="deepskyobjectsqueryfragment_text1_textview_text">"Deepsky objects query - to be implemented"</string>
    
    <string name="cometsfragment_text1_textview_text">"Comets - to be implemented"</string>
    <string name="ephemeridesfragment_text1_textview_text">"Ephemerides - to be implemented"</string>
    <string name="observersfragment_text1_textview_text">"Observers - to be implemented"</string>
    
    <string name="general_Ok">"OK"</string>
    <string name="general_Yes">"Yes"</string>
    <string name="general_No">"No"</string>
    <string name="general_Cancel">"Cancel"</string>
    
    <string-array name="seeings">
        <item>""</item>
        <item>"Excellent"</item>
        <item>"Good"</item>
        <item>"Moderate"</item>
        <item>"Poor"</item>
        <item>"Bad"</item>
    </string-array>
    
    <string-array name="visibilities">
        <item>""</item>
        <item>"Very simple, prominent object"</item>
        <item>"Object easily percepted with direct vision"</item>
        <item>"Object perceptable with direct vision"</item>
        <item>"Averted vision required to percept object"</item>
        <item>"Object barely perceptable with averted vision"</item>
        <item>"Perception of object is very questionable"</item>
        <item>"Object definitely not seen"</item>
    </string-array>
    
</resources>