<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical" >
    <LinearLayout android:layout_width="match_parent" android:orientation="horizontal" android:layout_height="wrap_content" >
    	<TextView android:id="@+id/deepskyobservationsfragment_text1_textview_id" android:layout_width="0dp"  android:layout_weight="1"  android:layout_height="wrap_content" android:layout_marginTop="12dp" android:gravity="left" />
    	<TextView android:id="@+id/deepskyobservationsfragment_dsobstosee_textview_id" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="12dp" android:gravity="right" />
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:orientation="horizontal" android:layout_height="wrap_content" >
        <Button   android:id="@+id/deepskyobservationsfragment_observations_button_id"  android:textSize="@dimen/deepskyobservationsdetailsfragment_observations_button_textsize" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/deepskyobservationsdetailsfragment_observations_button_text" android:layout_weight="1" /> 
	    <Button   android:id="@+id/deepskyobservationsfragment_mode_button_id"  android:textSize="@dimen/deepskyobservationsdetailsfragment_mode_button_textsize" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/deepskyobservationsdetailsfragment_mode_button_text1" android:layout_weight="1" /> 
	</LinearLayout>
	<FrameLayout android:id="@+id/deepskyobservationsfragment_framelayout" android:layout_width="match_parent" android:layout_height="0dp"  android:layout_weight="1">	    
	</FrameLayout>
    <LinearLayout android:layout_width="match_parent" android:orientation="horizontal" android:layout_height="wrap_content" >
	    <Button   android:id="@+id/deepskyobservationsfragment_objects_button_id"  android:textSize="@dimen/deepskyobservationsdetailsfragment_objects_button_textsize" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/deepskyobservationsdetailsfragment_objects_button_text" android:layout_weight="1" /> 
	    <Button   android:id="@+id/deepskyobservationsfragment_search_button_id"  android:textSize="@dimen/deepskyobservationsdetailsfragment_search_button_textsize" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/deepskyobservationsdetailsfragment_search_button_text" android:layout_weight="1" /> 
	</LinearLayout>   
</LinearLayout>